--- a/Html/Header.html
+++ b/Html/Header.html
@@ -18,7 +18,7 @@
   <header>
     <!-- Jumbotron -->
     <div class="p-4 text-center bg-info flex-fill h-75" >
-      <h1 class="fs-1 ">Captivate Interiors
+      <h1 class="fs-1 ">First Class Interiors
         <img class="float-start"
           src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/68/000000/external-blueprint-industrial-revolution-smashingstocks-mixed-smashing-stocks.png" />
         <!--Add link to footer <a target="_blank" href="https://icons8.com/icon/7G8F6v3heFob/blueprint">Blueprint icon by Icons8</a> -->
