--- a/Html/About.html
+++ b/Html/About.html
@@ -87,7 +87,7 @@
         <p id="CEO_DES">
           <b>current ceo and the daughter of the company founder the Magnanimous Barney Calhoun
             <br>Born 2002 in North shore Hospital, she has a Master's in business from yale
-            <br> She Became Ceo of Captivate Interiors LLC Inc in August of 2020<b>
+            <br> She Became Ceo of First Class Interiors in August of 2020<b>
         </p>
         <button id="CEO_BTN" class="btn btn-primary" type="button" onclick="changeMD()">Change to MD</button>
       </div>
@@ -132,7 +132,7 @@
         <p>
           <b>Born 1972 in wellington Hospital
             <br> Advertising specialist hired in 2004
-            <br> Business degee from AUT</b>
+            <br> Business degree from AUT</b>
         </p>
       </div>
     </div>
