--- a/Html/Contact.html
+++ b/Html/Contact.html
@@ -58,7 +58,7 @@
       <h3 id="Conif">Contact Info : </h3>
       <p><b>Address :</b> 22b Ashfield Road, Wairau Valley, Auckland 0627</p>
       <p><b>Phone number :</b> #64 022 735-1074 </p>
-      <p><b>Email address :</b> Captivate-Interiors@Outlook.co.nz</p>
+      <p><b>Email address :</b> firstclassinteriors@outlook.co.nz</p>
       <p><b>Fax number :</b> 1-800-444-4444</p>
     </div>
   </div>
