--- a/Html/Footer.html
+++ b/Html/Footer.html
@@ -62,7 +62,7 @@
         <!-- Copyright -->
         <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2022 Copyright:
-          <a class="text-white" href="/Html/About.html">Captivate Interiors</a>
+          <a class="text-white" href="/Html/About.html">First Class Interiors</a>
           <p>Logo :
           <a target="_blank" href="https://icons8.com/icon/7G8F6v3heFob/blueprint">Blueprint icon by Icons8</a></p> 
         </div>
