--- a/Html/Untitled-1.html
+++ b/Html/Untitled-1.html
@@ -12,7 +12,7 @@
   <header>
       <!-- Jumbotron -->
     <div class="p-5 text-center bg-info">
-      <h1 class="mb-3">Captivate Interiors  
+      <h1 class="mb-3">First Class Interiors
         <img class="float-end" 
         src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/68/000000/external-blueprint-industrial-revolution-smashingstocks-mixed-smashing-stocks.png"/> 
         <!--Add link to footer <a target="_blank" href="https://icons8.com/icon/7G8F6v3heFob/blueprint">Blueprint icon by Icons8</a> -->
