--- a/Html/About.html
+++ b/Html/About.html
@@ -33,7 +33,7 @@
         CEO_des.innerHTML =
           "Current Manging Director hired in june of 2016 as the Personal assistant  of the company founder Barney Calhoun"
           + "<br>After Quickly rising Through the ranks of the company At the behest of the Calhoun family "
-          + "<br> She Became the first female Manging Director of Captivate Interiors LLC Inc. in 2017."
+          + "<br> She Became the first female Manging Director of First Class Interiors in 2017."
           + "<br> Born 1995 In Sigourney Iowa she has a Master's in business from Harvard, "
           + "<br> she moved to New Zealand in 2015.";
         CEO_img.src = "/Images/MD.jpg"
@@ -46,8 +46,8 @@
         CEO_des.innerHTML =
           "<b>Current Ceo and the daughter of the company founder Barney Calhoun"
           + "<br>Born 2002 in North shore Hospital, she has a Master's in business from yale"
-          + "<br> and is the first female Ceo of Captivate Interiors LLC Inc. "
-          + "<br> She Became Ceo of Captivate Interiors LLC Inc in August of 2020<b>";
+          + "<br> and is the first female Ceo of First Class Interiors. "
+          + "<br> She Became Ceo of First Class Interiors in August of 2020<b>";
         CEO_img.src = "/Images/CEO.jpeg";
         CEO_btn.innerHTML = "Change to MD"
       }
