Name Change update

--- a/Html/About.html
+++ b/Html/About.html
@@ -47,7 +47,7 @@
           "<b>Current Ceo and the daughter of the company founder Barney Calhoun"
           + "<br>Born 2002 in North shore Hospital, she has a Master's in business from yale"
           + "<br> and is the first female Ceo of First Class Interiors. "
-          + "<br> She Became Ceo of Captivate Interiors LLC Inc in August of 2020<b>";
+          + "<br> She Became Ceo of First Class Interiors in August of 2020<b>";
         CEO_img.src = "/Images/CEO.jpeg";
         CEO_btn.innerHTML = "Change to MD"
       }
