--- a/Html/About.html
+++ b/Html/About.html
@@ -70,7 +70,7 @@
   </script>
 </head>
 
-<body>
+<body class="bg-secondary">
   <div id="headerDiv"><object type="text/html" data="header.html"
       style="overflow:auto; width: 100%; height: 100%;"></object></div>
   <div id="navDiv"><object type="text/html" data="Navbar.html"
