--- a/Html/Contact.html
+++ b/Html/Contact.html
@@ -36,7 +36,9 @@
      $("Conif").hover(function(){document.getElementById("Conif").style.color = 'blue';},function(){}) 
    
   </script>
-
+<style>
+  body {font-family: 'times new roman', serif;}
+</style>
 </head>
 
 <body onload="Buttontoggle()">
