--- a/Html/Navbar.html
+++ b/Html/Navbar.html
@@ -11,7 +11,7 @@
   <script src="/Bootstrap/bootstrap-5.2.0-dist/bootstrap-5.2.0-dist/js/bootstrap.min.js"></script>
 
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top " style="background-color: #e3f2fd;">
+  <nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top bg-info">
     <div class="container-fluid">
       <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
         aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,16 +20,16 @@
       <div class="collapse navbar-collapse" id="navbarExample01">
         <ul class="navbar-nav me-left mb-2 mb-lg-0">
           <li class="nav-item ">
-            <a class="nav-link " aria-current="page" href="Home.html" target="_parent">Home</a>
+            <a class="nav-link text-black" aria-current="page" href="Home.html" target="_parent">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Contact.html"target="_parent">Contact Us</a>
+            <a class="nav-link text-black" href="Contact.html"target="_parent">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Shop.html"target="_parent">Shop</a>
+            <a class="nav-link text-black" href="Shop.html"target="_parent">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="About.html"target="_parent">About Us</a>
+            <a class="nav-link text-black" href="About.html"target="_parent">About Us</a>
           </li>
         </ul>
       </div>
